--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,16 +7,24 @@
         android:layout_height="match_parent"
         android:clipChildren="false"
         android:layerType="software"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
         <android.support.v4.view.ViewPager
             android:id="@+id/viewPager"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="150dp"
+            android:layout_marginTop="50dp"
+            android:layout_height="300dp"
             android:layout_marginLeft="50dp"
             android:layout_marginRight="50dp"
-            android:layout_marginTop="150dp"
             android:clipChildren="false"/>
+        <TextSwitcher
+            android:id="@+id/textSwitcher"
+            android:layout_marginTop="60dp"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:text="@string/app_name"
+            android:inAnimation="@anim/in_animation"
+            android:outAnimation="@anim/out_animation"
+            android:background="@android:color/darker_gray"/>
     </LinearLayout>
 </layout>
