--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,24 +7,40 @@
         android:layout_height="match_parent"
         android:clipChildren="false"
         android:layerType="software"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:showDividers="middle"
+        android:divider="@drawable/dividers">
 
         <android.support.v4.view.ViewPager
             android:id="@+id/viewPager"
             android:layout_width="match_parent"
-            android:layout_marginTop="50dp"
             android:layout_height="300dp"
             android:layout_marginLeft="50dp"
             android:layout_marginRight="50dp"
+            android:layout_marginTop="50dp"
             android:clipChildren="false"/>
+
         <TextSwitcher
             android:id="@+id/textSwitcher"
-            android:layout_marginTop="60dp"
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:text="@string/app_name"
+            android:layout_marginTop="60dp"
+            android:background="@android:color/darker_gray"
             android:inAnimation="@anim/in_animation"
             android:outAnimation="@anim/out_animation"
-            android:background="@android:color/darker_gray"/>
+            android:text="@string/app_name"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:gravity="center"
+            android:text="@string/start"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:gravity="center"
+            android:text="@string/start"/>
+
     </LinearLayout>
 </layout>
